# finegrained-relative-repr-repro

./: .gitignore  README.md  REPRODUCTION_SUMMARY.md  pyproject.toml
configs/: data_manifest.local.yaml  pal_strict.yaml  paper_parity.yaml  reproduction_matrix.yaml
docs/: ablation_downstream_classification_segmentation_results.md  ablation_downstream_retrieval_results.md  ade20k_dense_debug_results.md  ade20k_dense_protocol_recovery.md  ade20k_frequent_class_error_analysis.md  ade20k_group_calibration_results.md  continuation_handoff.md  full_reproduction_plan.md  full_reproduction_status.md  paper_claims_and_experiments.md  pipeline_results_snapshot.md  recent_experiment_audit_summary.md  reproduction_plan.md  reproduction_status.md  results_snapshot.md  segmentation_debug_notes.md  zh_experiment_design_results_analysis.md
scripts/: analyze_ade20k_segmentation_errors.py  analyze_anchor_overlap.py  diagnose_segmentation_protocol.py  evaluate_classification.py  evaluate_segmentation.py  extract_coco_tokens.py  extract_flickr30k_tokens.py  extract_karpathy_retrieval_tokens.py  merge_token_chunks.py  prepare_karpathy_splits.py  run_ade20k_dense_protocol_recovery.py  run_ade20k_group_calibration_probe.py  run_cka_layer_sweep.py  run_classification_ablation_eval.py  run_classification_ablation_fast.py  run_full_coco_extraction.sh  run_full_pal_train.sh  run_local_smoke.sh  run_prompt_sweep.py  run_reproduction_pipeline.py  run_segmentation_ablation_probes_fast.py  write_baseline_tracking_report.py
tests/: test_cka.py  test_classification_support.py  test_eval_contract.py  (+9 more)
(+14 files in other folders)
